# internship_experimentals

./: .gitignore  CMakeLists.txt  README.md  main.cpp
boost_experimentals/: CMakeLists.txt  boost_asio_client.cpp  boost_asio_server.cpp  boost_asio_simple_server.cpp  boost_asio_with_fibers_server.cpp  pp_tree.cpp  thread.cpp
boost_experimentals/detail/: yield.hpp
concurent/: CMakeLists.txt  Makefile  thread_main.cpp
concurent/containers/include/: list.hpp  mutex.hpp
concurent/containers/src/: mutex.cpp
concurrent/: CMakeLists.txt
concurrent/impl/fiber/: common.hpp  context_impl.hpp  fiber_impl.hpp  posix_context_impl.hpp  posix_fiber_impl.hpp  windows_context_impl.hpp  windows_fiber_impl.hpp
concurrent/impl/future_impl/: future_impl.hpp
concurrent/impl/shared_state_impl/: shared_state_interface.hpp  shared_state_recv.hpp  shared_state_send.hpp
concurrent/impl/synchronization_primitives/: condition_variable_impl.hpp  mutex_impl.hpp
concurrent/include/concurrent/: async.hpp  condition_variable.hpp  executor.hpp  future.hpp  handler.hpp  mutex.hpp  packaged_task.hpp  queued_lock.hpp  shared_lock.hpp  thread_pool.hpp  unique_lock.hpp  utility_concepts.hpp
concurrent/include/concurrent/asio/: asio.hpp  error_code.hpp
concurrent/include/concurrent/containers/: blocking_queue.hpp  list.hpp  mpmc_queue.hpp  shared_mutex.hpp  stacks.h  stacks.hpp
concurrent/include/concurrent/fiber/: asio.hpp  async.hpp  condition_variable.hpp  executor.hpp  fiber.hpp  future.hpp  handler.hpp  mutex.hpp  round_robin_scheduller.hpp  scheduller.hpp  thread_pool.hpp
concurrent/src/: condition_variable.cpp  handler.cpp  mutex.cpp  queued_lock.cpp
concurrent/src/fiber/: fiber.cpp  handler.cpp
concurrent/src/impl/fiber/: posix_context_impl.cpp  posix_fiber_impl.cpp  windows_context_impl.cpp  windows_fiber_impl.cpp
execs/: CMakeLists.txt  condvar_exec.cpp  custom_async_exec.cpp  custom_fiber_async_exec.cpp  custom_unique_lock.cpp  fiber_future_exec.cpp  fibers_with_thread_pool.cpp  future_custom_exec.cpp  future_std_example.cpp  lock_guard.cpp  lock_types.cpp  packaged_task_test.cpp  processor_reordering.cpp  queued_lock_exec.cpp  simple_fiber_exec.cpp  thread_main.cpp  thread_pool_exec.cpp  ticket_lock_exec.cpp
my_lib/: CMakeLists.txt
my_lib/include/conteiners/: list.hpp  stack.hpp  vector.hpp
my_lib/src/: vector.cpp
presentations/: README.txt
presentations/concepts/code/: 1.cpp  2.cpp  3.cpp  Makefile  algorithm.cpp  concepts.cpp  ranges.cpp
presentations/concepts/slides/: slides.md
